--- a/0/配置.md
+++ b/0/配置.md
@@ -18,3 +18,9 @@ bcdedit /timeout 30
 ## 设置windbg目标
 "C:\Program Files (x86)\Windows Kits\10\Debuggers\x86\windbg.exe" -y SRV*C:\symbols*http://msdl.microsoft.com/download/symbols -b -k com:pipe,port=//./pipe/com_1,baud=115200,reconnect
 
+## 关闭KPIT 修改注册表禁用英特尔CPU幽灵/熔断/僵尸负载漏洞补丁恢复性能 <https://bbs.pcbeta.com/viewthread-1816722-1-1.html>
+打开注册表编辑器RegEdit，打开路径：\HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Session Manager\Memory Management
+
+1、将FeatureSettingsOverride键值默认0修改为3（如果没有这键值，就右键新建DWORD32位，键值名称FeatureSettingsOverride）
+
+2、右键新建DWORD32位，键值名称FeatureSettingsOverrideMask，将FeatureSettingsOverrideMask键值默认0修改为3。
