--- a/2/段描述符解析.md
+++ b/2/段描述符解析.md
@@ -11,6 +11,12 @@ RPL: 11
 
 # 段描述符
 通过段选择子在段描述符表中找到段描述符
+## P位
+先看P位，P = 1段描述符有效，P = 0段描述符无效。
+
+## S位
+S = 1代码段或者数据段描述符，S = 0系统段描述符。
+
 ## D/B位
 ### 对CS段的影响
 如果D/B位为1 采用32位寻址方式
@@ -25,13 +31,18 @@ RPL: 11
 ### 对其他段寄存器没有影响
 
 ## type位
+### S = 1
 ![alt text](image-1.png)
-### 表中accessed
+#### 表中accessed
 表示这个描述符是否被使用过，如果使用过就会变为对应有accessed标记的值（0->1, 2->3, ...）
-### 表中expend-down
+#### 表中expend-down
 有expend-down标记意味着描述符base-limit区间内的地址不能访问，base-limit区间外的地址可以访问
-### 表中conforming
+#### 表中conforming
 纯段模式才发挥作用，让应用层直接访问内核，现代计算机使用段页模式，conforming无法发挥作用
+
+### S = 0
+![alt text](image-2.png)
+段描述符、type等会有不同的含义
 
 ## G位
 描述符limit的单位。为1，limit以页为单位；为0，limit以字节为单位
