补充2作业-跨段跳转不提权

--- a/0/配置.md
+++ b/0/配置.md
@@ -24,3 +24,9 @@ bcdedit /timeout 30
 1、将FeatureSettingsOverride键值默认0修改为3（如果没有这键值，就右键新建DWORD32位，键值名称FeatureSettingsOverride）
 
 2、右键新建DWORD32位，键值名称FeatureSettingsOverrideMask，将FeatureSettingsOverrideMask键值默认0修改为3。
+
+## vs关闭增量链接
+![alt text](image.png)
+
+## vs关闭随机基址
+![alt text](image-1.png)
