--- a/2/段描述符解析.md
+++ b/2/段描述符解析.md
@@ -56,3 +56,129 @@ S = 1代码段或者数据段描述符，S = 0系统段描述符。
 当前特权级别，为cs段寄存器对应段描述符的DPL
 ### RPL
 请求特权级别，在段选择子中，以什么样的权限请求段描述符，段描述符会依据它自己的DPL判定（普通数据段不判断，堆栈段会判断），堆栈段必须RPL == CPL == DPL，代码段上CPL == DPL，RPL会自动被置回
+
+# 作业（win32控制台程序）
+### jmp jar远眺转不提权，未还原cs段
+```c++
+#include "stdafx.h"
+
+void __declspec(naked) test()
+{
+	__asm
+	{
+		ret
+	}
+}
+
+int _tmain(int argc, _TCHAR* argv[])
+{
+	printf("%x\r\n", test);
+
+	char bufCode[6] = { 0, 0, 0, 0, 0x48, 0};
+	*(int *)&bufCode[0] = (int)test;
+	__asm 
+	{
+		push hei
+		jmp far bufCode
+hei:
+		
+	}
+
+	return 0;
+}
+```
+### jmp jar远眺转不提权，还原cs段
+#### 这个是正确的，用的retf改变的cs值
+```c++
+#include "stdafx.h"
+
+void __declspec(naked) test()
+{
+	__asm
+	{
+		retf
+	}
+}
+
+int _tmain(int argc, _TCHAR* argv[])
+{
+	printf("%x\r\n", test);
+
+	char bufCode[6] = { 0, 0, 0, 0, 0x48, 0};
+	*(int *)&bufCode[0] = (int)test;
+	__asm 
+	{
+		push cs
+		push hei
+		jmp fword ptr bufCode
+hei:
+		
+	}
+
+	return 0;
+}
+```
+#### 这个是报错的，不知道怎么修，不过逻辑上没问题，jmp far该怎么跳转、__declspec(naked) __asm中变量怎么用？
+```c++
+#include "stdafx.h"
+
+void __declspec(naked) test()
+{
+    char bufCode[6] = { 0, 0, 0, 0, 0, 0};
+	__asm
+	{
+		pop eax
+		pop ecx
+
+		mov dword ptr [bufCode], eax
+		mov word ptr  [bufCode + 4], cx
+
+		jmp far bufCode
+	}
+}
+
+int _tmain(int argc, _TCHAR* argv[])
+{
+	printf("%x\r\n", test);
+
+	char bufCode[6] = { 0, 0, 0, 0, 0x48, 0};
+	*(int *)&bufCode[0] = (int)test;
+	__asm 
+	{
+		push cs
+		push hei
+		jmp far bufCode
+hei:
+		
+	}
+
+	return 0;
+}
+```
+### call far跨段跳转不提权，还原cs段
+```c++
+#include "stdafx.h"
+
+void __declspec(naked) test()
+{
+
+	__asm
+	{
+		retf
+	}
+}
+
+int _tmain(int argc, _TCHAR* argv[])
+{
+	printf("%x\r\n", test);
+
+	char bufCode[6] = { 0, 0, 0, 0, 0x48, 0};
+	*(int *)&bufCode[0] = (int)test;
+	__asm 
+	{
+		call far bufCode
+	}
+
+	return 0;
+}
+```
