修正调用门作业结果

--- a/3/调用门.md
+++ b/3/调用门.md
@@ -52,6 +52,7 @@ int _tmain(int argc, _TCHAR* argv[])
 
 # 作业
 ## jmp、ret、retf能否跨段跳转提权
+只写了jmp，剩下两个写法差不多。
 ```c++
 #include "stdafx.h"
 
@@ -94,4 +95,4 @@ hei:
 ![alt text](image-1.png)
 
 ## 结果
-只实验了jmp，但是剩下两个同理，这三个都无法获得0环的新堆栈
+jmp在调用门只能同权限跳转，ret不能改变cs内容，retf同权限或向低权限跳转，call同权限或向高权限跳转
