修正中断门

--- a/4.中断门/笔记.md
+++ b/4.中断门/笔记.md
@@ -8,7 +8,7 @@
 是全局描述符表的选择子，进入中断门后，会把cs改变为这个，一般是0008
 
 ## 其中Offset
-是中断后跳转的地址
+是中断后跳转的地址的偏移，Segment Selector对应的段的偏移
 
 # 使用int
 int3是int 3的快捷写法，是指令的优化，int后是几就在中断描述符表中查找第几项段描述符。
@@ -55,6 +55,15 @@ lgdt\lidt
 从栈顶弹出 EIP >> CS >> EFLAGS >> ESP >> SS
 ## NT = 1
 任务切换返回，使用到TSS表。详情请查看任务段调用及返回
+
+# 陷阱门
+与中断门用的同一张表，同样是int指令，但是跳转后eflags不同，中断门eflags是2，陷阱门eflags为202
+
+## 中断门与陷阱门的不同
+### 1
+进入中断门会清除eflags的VM、NT、IF、TF位；进入陷阱门会清除VM、NT、TF位
+### 2
+由于中断门会清除IF位，导致一些中断触发会悬挂，陷阱门则不会
 
 # 作业
 ```c++
