--- a/0.配置/笔记.md
+++ b/0.配置/笔记.md
@@ -4,20 +4,19 @@ msconfig
 ## 复制当前引导
 bcdedit /copy {current} /d debug123
 ## 将复制的引导配置到显示的末尾
-bcdedit /displayorder {929933b9-ac64-11ef-96b1-b8795029782d} /addlast
+bcdedit /displayorder {929933ba-ac64-11ef-96b1-b8795029782d} /addlast
 ## 设置com端口
 bcdedit /dbgsettings SERIAL DEBUGPORT:1 BAUDRATE:115200
 ## window引导程序加载时就可以挂在调试器
-bcdedit /bootdebug {929933b9-ac64-11ef-96b1-b8795029782d} ON
+bcdedit /bootdebug {929933ba-ac64-11ef-96b1-b8795029782d} ON
 ## 界面加载时挂在调试
-bcdedit /debug {929933b9-ac64-11ef-96b1-b8795029782d} ON
+bcdedit /debug {929933ba-ac64-11ef-96b1-b8795029782d} ON
 ## 设置超时
 bcdedit /timeout 30
 ## 设置虚拟机的串行端口
 //./pipe/com_1
 ## 设置windbg目标
 "C:\Program Files (x86)\Windows Kits\10\Debuggers\x86\windbg.exe" -y SRV*C:\symbols*http://msdl.microsoft.com/download/symbols -b -k com:pipe,port=//./pipe/com_1,baud=115200,reconnect
-
 ## 关闭KPIT 修改注册表禁用英特尔CPU幽灵/熔断/僵尸负载漏洞补丁恢复性能 <https://bbs.pcbeta.com/viewthread-1816722-1-1.html>
 打开注册表编辑器RegEdit，打开路径：\HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Session Manager\Memory Management
 
@@ -25,8 +24,14 @@ bcdedit /timeout 30
 
 2、右键新建DWORD32位，键值名称FeatureSettingsOverrideMask，将FeatureSettingsOverrideMask键值默认0修改为3。
 
+# vs
 ## vs关闭增量链接
 ![alt text](image.png)
-
 ## vs关闭随机基址
 ![alt text](image-1.png)
+
+# 101012分页
+## 禁用PAE
+bcdedit /set pae ForceDisable
+## 禁用数据执行保护
+bcdedit /set nx AlwaysOff
