PDE、PTE；增加wbg命令的解析

--- a/0.wdg命令/笔记.md
+++ b/0.wdg命令/笔记.md
@@ -1,15 +1,20 @@
 # 查看寄存器
-r gdtr
+r 寄存器
 
 # 查看地址的内存，（物理内存要在最前面加！，虚拟内存不用）
 ## 注意显示出来的内存全是小端序
-db/dw/dd/dq gdtr [l 0x20]
+db/dw/dd/dq 寄存器/address [l 0x20]
 ## 竖向查看
-dds/dqs gdtr [l 0x20]
+dds/dqs 寄存器/address [l 0x20]
 ## 查看物理内存
-!dd 3ab6d000
+!dd address
 ## 显示内存的unicode
-!du 3ab6d000
+!du address
+
+# 改变内存（物理内存要在最前面加！，虚拟内存不用）
+eb/ew/ed/eq address target
+## 补充
+![alt text](image.png)
 
 # 查看反汇编
 u nt!DbgPrint
