--- a/6.页初探/笔记.md
+++ b/6.页初探/笔记.md
@@ -11,7 +11,10 @@ C:\Windows\System32\drivers\
 ## 注册表部分功能记录
 什么时候加载驱动、是否开机自启
 
-# 页目录表、页表、页、PDE、PTE
+# cr3
+cr3寄存器指向了页目录表所在地址
+
+# 页目录表、页表（PDT）、页(PTT)、PDE、PTE
 由之前address = base + offset的段寻址模式，再次扩展address成为了找到“真正地址的钥匙”，将address在解析，这里以10-10-12举例，开头10位为页目录表的索引，查到PDE，页目录表可以看成长度为1024的一个指针数组，里面的PDE指向了对应的页表，页表同样可以看成长度为1024的指针数组，取address中间10位为索引，查到PTE，PTE指向了对应页的地址，页可以看成一个长度为4096的字节数组，去最后12位作为偏移，在页中查询，才是最后的真是地址。而address是虚拟的地址。这种查询具有缓存机制，运算过一次后，会记录下来，之后同样的查询不在运算。每一个进程都有一套独立的页目录表、页表、页，为了防止这一套占用内存过大，还设置了即使加载机制，及用到某个页在加载相应的页目录表、页表。
 
 # 作业
