--- a/8.挂页/笔记.md
+++ b/8.挂页/笔记.md
@@ -89,4 +89,4 @@ int _tmain(int argc, _TCHAR* argv[])
 原理类似
 
 # 总结
-真实地址永远只有一套，线性地址/虚拟地址是对真实地址的封装，像是一个类，存入了真实地址和其对应的信息。之所以是PTE而不是颗粒度更小的页，是因为到了页地址就是真实地址了，替换的最小颗粒度是PTE。
+真实地址永远只有一套，线性地址/虚拟地址是对真实地址的封装，像是一个类，存入了真实地址和其对应的信息。之所以是PTE而不是颗粒度更小的页，是因为到了页地址就是真实地址了，替换的最小颗粒度是PTE，也就是说PTE在算就是真实地址了。
