--- a/9.页下 2-9-9-12/笔记.md
+++ b/9.页下 2-9-9-12/笔记.md
@@ -7,3 +7,12 @@ cr3指向了PDPT
 ## 分页
 线性地址按2-9-9-12拆分成四部分，前三部分2-9-9用来找到真实地址页基址，最后一部分12是偏移。不同的是页目录表、页目录、页表中的每一项都是8字节64位，但只用了36位，页目录表有4项，页目录、页表都变成了拥有512项
 ![alt text](image.png)
+
+# 补充-cr寄存器揭秘
+IA-32 cpu设计了5个控制寄存器（cr0~cr4）来决定当前cpu的操作模式以及当前任务的关键特征，cr0和cr4与cpu的工作模式密切相关，cr1保留未使用，cr2和cr3与分页机制有关，cr3用来切换和定位当前正在使用的页表，当软件访问某个内存地址时，cpu会通过页表做地址翻译，当访问的内存不在物理内存而报告缺页异常时，cpu会通过cr2寄存器向操作系统报告访问失败的线性地址。 
+![alt text](IMG_6434.JPG)
+![alt text](IMG_6435.JPG)
+
+# 作业
+ida 跟32位内核MmIsAddressValid函数
+![alt text](image-1.png)
