控制寄存器、缓存

--- a/9.页下 2-9-9-12/笔记.md
+++ b/9.页下 2-9-9-12/笔记.md
@@ -2,16 +2,18 @@
 为了扩大内存，出现了PAE，来支持36跟地址总线，并衍生了2-9-9-12分页
 
 # 2-9-9-12分页：页目录表（PDPT）、页目录（PDT）、页表（PTT）
+![alt text](image-4.png)
+## PDPTE格式
+![alt text](image-3.png)
 ## cr3 
 cr3指向了PDPT
 ## 分页
 线性地址按2-9-9-12拆分成四部分，前三部分2-9-9用来找到真实地址页基址，最后一部分12是偏移。不同的是页目录表、页目录、页表中的每一项都是8字节64位，但只用了36位，页目录表有4项，页目录、页表都变成了拥有512项
 ![alt text](image.png)
 
-# 补充-cr寄存器揭秘
-IA-32 cpu设计了5个控制寄存器（cr0~cr4）来决定当前cpu的操作模式以及当前任务的关键特征，cr0和cr4与cpu的工作模式密切相关，cr1保留未使用，cr2和cr3与分页机制有关，cr3用来切换和定位当前正在使用的页表，当软件访问某个内存地址时，cpu会通过页表做地址翻译，当访问的内存不在物理内存而报告缺页异常时，cpu会通过cr2寄存器向操作系统报告访问失败的线性地址。 
-![alt text](IMG_6434.JPG)
-![alt text](IMG_6435.JPG)
+# 页表自映射
+在64位模式下，高等级页表项都指向低等级页表项的物理地址，依次类推，直到最低级别页表项，即可获取物理页面进而读取内容。在此过程中 Cr3 寄存器中存储了最高级页表（PML4）的表基物理地址。为了更好的管理这些页表，微软采取了最高级页表基址自映射的方式实现仅仅利用8字节物理内存，就可以在每次访问分页管理相关的内存时，少做一次页表查询操作来优化速度。
+![alt text](image-2.png)
 
 # 作业
 ida 跟32位内核MmIsAddressValid函数
