--- a/0.wdg命令/笔记.md
+++ b/0.wdg命令/笔记.md
@@ -27,3 +27,15 @@ u nt!DbgPrint
 # kv
 查看堆栈详情，可能会不全
 
+# dt 
+显示数据类型
+
+# windbg快捷键
+https://www.cnblogs.com/yilang/p/12076900.html
+## 实测
+![alt text](image-1.png)
+在这个调试界面快捷键与vs一样。
+
+# 《软件调试》附录
+![alt text](IMG_6460.JPG)
+![alt text](1.png)
