--- a/15.驱动链表与断链/笔记.md
+++ b/15.驱动链表与断链/笔记.md
@@ -57,6 +57,86 @@ NTSTATUS DriverEntry(PDRIVER_OBJECT pDriver, PUNICODE_STRING pReg)
 ```
 ![alt text](image-1.png)
 
+# 驱动断链
+## 第一种
+```c
+#include <ntifs.h>
+
+typedef struct _KLDR_DATA_TABLE_ENTRY
+{
+	LIST_ENTRY InLoadOrderLinks;
+	LIST_ENTRY exp;
+	ULONG un;
+	ULONG NonPageDebugInfo;
+	ULONG DllBase;
+	ULONG EntryPoint;
+	ULONG SizeOfImage;
+	UNICODE_STRING FullDllName;
+	UNICODE_STRING BaseDllName;
+	ULONG Flags;
+	USHORT LoadCount;
+	USHORT __Undefined5;
+	ULONG __Undefined6;
+	ULONG CheckSum;
+	ULONG TimeDateStamp;
+} KLDR_DATA_TABLE_ENTRY, *PKLDR_DATA_TABLE_ENTRY;
+
+NTKERNELAPI NTSTATUS ObReferenceObjectByName(
+	IN PUNICODE_STRING ObjectName,
+	IN ULONG Attributes,
+	IN PACCESS_STATE PassedAccessState OPTIONAL,
+	IN ACCESS_MASK DesiredAccess OPTIONAL,
+	IN POBJECT_TYPE ObjectType,
+	IN KPROCESSOR_MODE AccessMode,
+	IN OUT PVOID ParseContext OPTIONAL,
+	OUT PVOID *Object
+);
+
+extern POBJECT_TYPE* IoDriverObjectType;
+
+VOID DriverUnload(_In_ struct _DRIVER_OBJECT *DriverObject)
+{
+	DbgPrint("-----------DriverUnload---------------\r\n");
+}
+
+void hideDriver(PWCH object_name_)
+{
+	LARGE_INTEGER in = { 0 };
+	in.QuadPart = -10000 * 5000;
+	KeDelayExecutionThread(KernelMode, FALSE, &in);
+
+	UNICODE_STRING object_name = { 0 };
+	RtlInitUnicodeString(&object_name, object_name_);
+	PDRIVER_OBJECT target_dirver = NULL;
+	NTSTATUS status = ObReferenceObjectByName(&object_name, FILE_ALL_ACCESS, 0, 0, *IoDriverObjectType, KernelMode, NULL, &target_dirver);
+	if (NT_SUCCESS(status))
+	{
+		PKLDR_DATA_TABLE_ENTRY ldr = (PKLDR_DATA_TABLE_ENTRY)target_dirver->DriverSection;
+		target_dirver->DriverInit = NULL;
+		target_dirver->DriverSection = ldr->InLoadOrderLinks.Flink;
+		RemoveEntryList(&ldr->InLoadOrderLinks);
+		ObDereferenceObject(target_dirver);
+
+		DbgPrintEx(77, 0, "[db]: object name = %wZ\r\n", &object_name);
+	}
+
+	return;
+}
+
+NTSTATUS DriverEntry(PDRIVER_OBJECT pDriver, PUNICODE_STRING pReg)
+{
+	HANDLE hThread = NULL;
+	// L"\\driver\\PCHunter32as"是要隐藏的驱动对象路径
+	NTSTATUS status = PsCreateSystemThread(&hThread, THREAD_ALL_ACCESS, NULL, NULL, NULL, hideDriver, L"\\driver\\PCHunter32as");
+	if (NT_SUCCESS(status))
+	{
+		NtClose(hThread);
+	}
+
+}
+```
+![alt text](image-2.png)
+
 # 战绩可查，hh
 ![alt text](image.png)
 
