驱动通信封装完成

--- a/17.驱动通信/笔记.md
+++ b/17.驱动通信/笔记.md
@@ -1,97 +1,97 @@
 # 内容概述
 封装的驱动通信代码、总结
 
-# r3
-```c
-#include "stdafx.h"
-#include <Windows.h>
-
-#define _SYM_NAME L"\\\\.\\test"
-
-#define CODE_CTR_INDEX 0x800
-#define TEST CTL_CODE(FILE_DEVICE_UNKNOWN, CODE_CTR_INDEX, METHOD_BUFFERED, FILE_ANY_ACCESS)
-
-int main()
-{
-	HANDLE hDevice = CreateFile(_SYM_NAME, GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, FILE_ATTRIBUTE_NORMAL, NULL);
-	if (!hDevice)
-	{
-		printf("打开设备失败 %d\r\n", GetLastError());
-
-	}
-	else
-	{
-		system("pause");
-
-		ULONG input = 10;
-		ULONG64 output = 0;
-		ULONG reLength = 0;
-		BOOL isSuccess = DeviceIoControl(hDevice, TEST, &input, 4, &output, 8, &reLength, 0);
-		printf("sucess %d, %d\r\n", isSuccess, GetLastError());
-		printf("output %d, %x\r\n", output);
-
-		system("pause");
-
-	}
-
-	system("pause");
-	return 0;
-}
-```
+# 总结
+驱动设置好回调函数，r3通过一个系统函数向驱动传入消息、接受消息。
 
 # r0
+## mian.c
 ```c
 #include <ntifs.h>
 
-#define _DEVIDE_NAME L"\\device\\test"
-#define _SYM_NAME L"\\??\\test"
+#include "driver.h"
 
-#define CODE_CTR_INDEX 0x800
-#define TEST CTL_CODE(FILE_DEVICE_UNKNOWN, CODE_CTR_INDEX, METHOD_BUFFERED, FILE_ANY_ACCESS)
+NTSTATUS NTAPI dispatch(PCommPackage package)
+{
+	NTSTATUS status = STATUS_UNSUCCESSFUL;
+	switch (package->code)
+	{
+	case Test:
+	{
+		PTestPackage test = (PTestPackage)package->input;
+		DbgPrintEx(77, 0, "[db]: %d\r\n.", test->x);
+		status = STATUS_SUCCESS;
+		break;
+	}
+	}
 
+	return status;
+}
 
 VOID DriverUnload(PDRIVER_OBJECT pDriver)
 {
-	if (pDriver->DeviceObject)
-	{
-		UNICODE_STRING un_sym_name = { 0 };
-		RtlInitUnicodeString(&un_sym_name, _SYM_NAME);
-		IoDeleteSymbolicLink(&un_sym_name);
-
-		UNICODE_STRING un_device_name = { 0 };
-		RtlInitUnicodeString(&un_device_name, _DEVIDE_NAME);
-		IoDeleteSymbolicLink(&un_device_name);
-	}
-	DbgPrint("-----------DriverUnload---------------\r\n");
+	destotyDriver(pDriver);
 }
+
+
+NTSTATUS DriverEntry(PDRIVER_OBJECT pDriver, PUNICODE_STRING pReg)
+{
+	registerDriver(pDriver, dispatch);
+	pDriver->DriverUnload = DriverUnload;
+	return STATUS_SUCCESS;
+}
+```
+## driver.h
+```c
+#pragma once
+#include "common.h"
+
+typedef NTSTATUS(NTAPI* CommCallbak)(PCommPackage package);
+
+NTSTATUS registerDriver(PDRIVER_OBJECT pDriver, CommCallbak callback);
+
+VOID destotyDriver(PDRIVER_OBJECT pDriver);
+```
+## driver.c
+```c
+#include "driver.h"
+
+// 传进来的回调
+CommCallbak globalCommCallbak = NULL;
+
+#define _DEVIDE_NAME L"\\device\\test"
+
 
 NTSTATUS deflaultDispatch(DEVICE_OBJECT *DeviceObject, IRP *Irp)
 {
 	Irp->IoStatus.Status = STATUS_SUCCESS;
-	DbgPrintEx(77, 0, "[db]: deflaultDispatch\r\n");
 	IoCompleteRequest(Irp, 0);
 	return STATUS_SUCCESS;
 }
 
-NTSTATUS dispatch(DEVICE_OBJECT *DeviceObject, IRP *Irp)
+NTSTATUS writeDispatch(DEVICE_OBJECT *DeviceObject, IRP *Irp)
 {
-	PIO_STACK_LOCATION io = IoGetCurrentIrpStackLocation(Irp);
-	DbgPrintEx(77, 0, "[db]: MajorFunction %x\r\n", io->MajorFunction);
-	DbgPrintEx(77, 0, "[db]: InputBufferLength %x\r\n", io->Parameters.DeviceIoControl.InputBufferLength);
-	DbgPrintEx(77, 0, "[db]: OutputBufferLength %x\r\n", io->Parameters.DeviceIoControl.OutputBufferLength);
-	DbgPrintEx(77, 0, "[db]: IoControlCode %x\r\n", io->Parameters.DeviceIoControl.IoControlCode);
-	DbgPrintEx(77, 0, "[db]: SystemBuffer %x, %x\r\n", Irp->AssociatedIrp.SystemBuffer, *(ULONG*)Irp->AssociatedIrp.SystemBuffer);
+	DbgBreakPoint();
+	NTSTATUS status = STATUS_UNSUCCESSFUL;
+	PIO_STACK_LOCATION ioStack = IoGetCurrentIrpStackLocation(Irp);
 
-	// 更改返回值
-	Irp->IoStatus.Status = STATUS_SUCCESS;
-	Irp->IoStatus.Information = io->Parameters.DeviceIoControl.OutputBufferLength;
-	*(ULONG*)Irp->AssociatedIrp.SystemBuffer = 0x200;
+	int length = ioStack->Parameters.Write.Length;
+	if (length == sizeof(CommPackage) && globalCommCallbak)
+	{
+		PCommPackage package = (PCommPackage)Irp->AssociatedIrp.SystemBuffer;
+		if (package->id == ID && MmIsAddressValid(package))
+		{
+			status = globalCommCallbak(package);
+		}
+	}
 
+	Irp->IoStatus.Information = 0;
+	Irp->IoStatus.Status = status;
 	IoCompleteRequest(Irp, 0);
-	return STATUS_SUCCESS;
+	return status;
 }
 
-NTSTATUS DriverEntry(PDRIVER_OBJECT pDriver, PUNICODE_STRING pReg)
+NTSTATUS registerDriver(PDRIVER_OBJECT pDriver, CommCallbak callback)
 {
 	UNICODE_STRING un_device_name = { 0 };
 	RtlInitUnicodeString(&un_device_name, _DEVIDE_NAME);
@@ -122,9 +122,112 @@ NTSTATUS DriverEntry(PDRIVER_OBJECT pDriver, PUNICODE_STRING pReg)
 												// 设置回调函数
 	pDriver->MajorFunction[IRP_MJ_CREATE] = deflaultDispatch;
 	pDriver->MajorFunction[IRP_MJ_CLOSE] = deflaultDispatch;
-	pDriver->MajorFunction[IRP_MJ_DEVICE_CONTROL] = dispatch;
+	pDriver->MajorFunction[IRP_MJ_WRITE] = writeDispatch;
 
-	pDriver->DriverUnload = DriverUnload;
-	return STATUS_SUCCESS;
+	if (NT_SUCCESS(status))
+	{
+		globalCommCallbak = callback;
+		DbgPrintEx(77, 0, "[db]: aaaa\r\n.");
+	}
+	return status;
+}
+
+VOID destotyDriver(PDRIVER_OBJECT pDriver)
+{
+	UNICODE_STRING sym_name = { 0 };
+	RtlInitUnicodeString(&sym_name, _SYM_NAME);
+
+	IoDeleteSymbolicLink(&sym_name);
+	if (pDriver->DeviceObject)
+	{
+		IoDeleteDevice(pDriver->DeviceObject);
+	}
+}
+```
+## common.h
+```c
+#pragma once
+#ifdef _R3
+#include <Windows.h>
+#else
+#include <ntifs.h>
+#endif
+
+#define ID 0x2333
+
+#define _SYM_NAME L"\\??\\test"
+
+typedef struct _CommPackage
+{
+	ULONG64 id;
+	ULONG64 code;
+	ULONG64 input;
+	ULONG64 input_length;
+	ULONG64 output;
+	ULONG64 output_length;
+}CommPackage, *PCommPackage;
+
+typedef enum _Code
+{
+	Test
+}Code;
+
+typedef struct _TestPackage
+{
+	int x;
+}TestPackage, *PTestPackage;
+```
+
+# r3
+## main.c
+```c
+#include "stdafx.h"
+#define _R3
+
+#include "../MyDriver/common.h"
+
+HANDLE global_device_handle;
+
+BOOLEAN driverInit()
+{
+	global_device_handle = CreateFileW(_SYM_NAME, GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, FILE_ATTRIBUTE_NORMAL, NULL);
+	if (global_device_handle == NULL || global_device_handle == INVALID_HANDLE_VALUE)
+	{
+		global_device_handle = NULL;
+		return FALSE;
+	}
+	return TRUE;
+}
+
+BOOLEAN driverComm(ULONG code, PVOID input, ULONG input_length, PVOID output, ULONG output_length)
+{
+	if (!global_device_handle)
+	{
+		driverInit();
+	}
+	
+	if (global_device_handle)
+	{
+		CommPackage package;
+		package.code = code;
+		package.input = (ULONG64)input;
+		package.input_length = (ULONG64)input_length;
+		package.output = (ULONG64)output;
+		package.output_length = (ULONG64)output_length;
+		SIZE_T pro = NULL;
+		package.id = ID;
+		return WriteFile(global_device_handle, &package, sizeof(CommPackage), &pro, NULL);
+	}
+
+	return FALSE;
+}
+
+int main()
+{
+	ULONG x = 200;
+	system("pause");
+	driverComm(Test, &x, 4, NULL, NULL);
+	system("pause");
+	return 0;
 }
 ```
